Rename some internal file variables
This now matches the agreed position on naming.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1469,34 +1469,34 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_if_exist_input:n #1
   {
-    \file_get_full_name:nN {#1} \l__file_path_str
-    \str_if_empty:NF \l__file_path_str
-      { \@@_input:V \l__file_path_str }
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NF \l__file_full_name_str
+      { \@@_input:V \l__file_full_name_str }
   }
 \cs_new_protected:Npn \file_if_exist_input:nT #1#2
   {
-    \file_get_full_name:nN {#1} \l__file_path_str
-    \str_if_empty:NF \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NF \l__file_full_name_str
       {
         #2
-        \@@_input:V \l__file_path_str
+        \@@_input:V \l__file_full_name_str
       }
   }
 \cs_new_protected:Npn \file_if_exist_input:nF #1#2
   {
-    \file_get_full_name:nN {#1} \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       {#2}
-      { \@@_input:V \l__file_path_str }
+      { \@@_input:V \l__file_full_name_str }
   }
 \cs_new_protected:Npn \file_if_exist_input:nTF #1#2#3
   {
-    \file_get_full_name:nN {#1} \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       {#3}
       {
         #2
-        \@@_input:V \l__file_path_str
+        \@@_input:V \l__file_full_name_str
       }
   }
 %    \end{macrocode}
@@ -2168,8 +2168,8 @@
 \cs_generate_variant:Nn \tl_gset_from_file:Nnn { c }
 \cs_new_protected:Npn \@@_set_from_file:NNnn #1#2#3#4
   {
-    \file_get_full_name:nN {#4} \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:nN {#4} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       { \__file_missing:n {#4} }
       {
         \group_begin:
@@ -2178,7 +2178,7 @@
           #3 \scan_stop:
           \exp_after:wN \@@_from_file_do:w
           \exp_after:wN \prg_do_nothing:
-            \tex_input:D \l__file_path_str \scan_stop:
+            \tex_input:D \l__file_full_name_str \scan_stop:
         \exp_args:NNNo \group_end:
         #1 #2 \l_@@_internal_a_tl
       }
@@ -2212,15 +2212,15 @@
 \cs_generate_variant:Nn \tl_gset_from_file_x:Nnn { c }
 \cs_new_protected:Npn \@@_set_from_file_x:NNnn #1#2#3#4
   {
-    \file_get_full_name:nN {#4} \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:nN {#4} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       { \__file_missing:n {#4} }
       {
         \group_begin:
           \etex_everyeof:D { \exp_not:N }
           #3 \scan_stop:
           \tl_set:Nx \l_@@_internal_a_tl
-            { \tex_input:D \l__file_path_str \c_space_token }
+            { \tex_input:D \l__file_full_name_str \c_space_token }
         \exp_args:NNNo \group_end:
         #1 #2 \l_@@_internal_a_tl
       }
