--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -612,7 +612,7 @@
 %   Used to test for the existence of files when opening.
 % \end{variable}
 %
-% \begin{variable}{\l__file_basename_str, \l__file_path_str}
+% \begin{variable}{\l__file_base_name_str, \l__file_full_name_str}
 %   Used to store and transfer the file name (including extension)
 %   and (partial) file path whilst reading files. (The file base is the
 %   basename plus any preceding directory name.)
@@ -774,11 +774,11 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l__file_basename_str, \l__file_path_str}
+% \begin{variable}{\l__file_base_name_str, \l__file_full_name_str}
 %   For storing the basename and full path whilst passing data internally.
 %    \begin{macrocode}
-\str_new:N \l__file_basename_str
-\str_new:N \l__file_path_str
+\str_new:N \l__file_base_name_str
+\str_new:N \l__file_full_name_str
 %    \end{macrocode}
 % \end{variable}
 %
@@ -882,12 +882,12 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_get_full_name:nN #1#2
   {
-    \__file_name_sanitize:nN {#1} \l__file_basename_str
-    \__file_name_quote:VN \l__file_basename_str \l__file_path_str
-    \__ior_open:No \g_@@_internal_ior \l__file_path_str
+    \__file_name_sanitize:nN {#1} \l__file_base_name_str
+    \__file_name_quote:VN \l__file_base_name_str \l__file_full_name_str
+    \__ior_open:No \g_@@_internal_ior \l__file_full_name_str
     \ior_if_eof:NTF \g_@@_internal_ior
       { \@@_get_full_name_search:N #2 }
-      { \str_set_eq:NN #2 \l__file_path_str }
+      { \str_set_eq:NN #2 \l__file_full_name_str }
     \ior_close:N \g_@@_internal_ior
   }
 \cs_generate_variant:Nn \file_get_full_name:nN { V }
@@ -906,13 +906,13 @@
 %</package>
     \seq_map_inline:Nn \l_file_search_path_seq
       {
-        \str_set:Nx \l__file_path_str
-          { \tl_to_str:n {##1} / \l__file_basename_str }
-        \__file_name_quote:VN \l__file_path_str \l__file_path_str
-        \__ior_open:NV \g_@@_internal_ior \l__file_path_str
+        \str_set:Nx \l__file_full_name_str
+          { \tl_to_str:n {##1} / \l__file_base_name_str }
+        \__file_name_quote:VN \l__file_full_name_str \l__file_full_name_str
+        \__ior_open:NV \g_@@_internal_ior \l__file_full_name_str
         \ior_if_eof:NF \g_@@_internal_ior
           {
-            \str_set_eq:NN #1 \l__file_path_str
+            \str_set_eq:NN #1 \l__file_full_name_str
             \seq_map_break:
           }
       }
@@ -936,8 +936,8 @@
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \file_if_exist:n #1 { T , F , TF }
   {
-    \file_get_full_name:nN {#1} \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       { \prg_return_false: }
       { \prg_return_true: }
   }
@@ -958,16 +958,16 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_input:n #1
   {
-    \file_get_full_name:nN {#1} \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       { \@@_missing:n {#1} }
-      { \@@_input:V \l__file_path_str }
+      { \@@_input:V \l__file_full_name_str }
   }
 \cs_new_protected:Npn \@@_missing:n #1
   {
-    \__file_name_sanitize:nN {#1} \l__file_basename_str
+    \__file_name_sanitize:nN {#1} \l__file_base_name_str
     \__msg_kernel_error:nnx { kernel } { file-not-found }
-      { \l__file_basename_str }
+      { \l__file_base_name_str }
   }
 \cs_new_protected:Npn \@@_input:n #1
   {
@@ -1232,13 +1232,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \ior_open:Nn #1#2
   {
-    \file_get_full_name:nN {#2} \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:nN {#2} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       {
-        \__file_name_sanitize:nN {#2} \l__file_basename_str
-        \__msg_kernel_error:nnx { kernel } { file-not-found } \l__file_basename_str
+        \__file_name_sanitize:nN {#2} \l__file_base_name_str
+        \__msg_kernel_error:nnx { kernel } { file-not-found } \l__file_base_name_str
       }
-      { \@@_open:No #1 \l__file_path_str }
+      { \@@_open:No #1 \l__file_full_name_str }
   }
 \cs_generate_variant:Nn \ior_open:Nn { c }
 %    \end{macrocode}
@@ -1250,11 +1250,11 @@
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \ior_open:Nn #1#2 { T , F , TF }
   {
-    \file_get_full_name:VN \l__file_basename_str \l__file_path_str
-    \str_if_empty:NTF \l__file_path_str
+    \file_get_full_name:VN \l__file_base_name_str \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
       { \prg_return_false: }
       {
-        \@@_open:No #1 \l__file_path_str
+        \@@_open:No #1 \l__file_full_name_str
         \prg_return_true:
       }
   }
@@ -1592,10 +1592,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_open:Nn #1#2
   {
-    \__file_name_sanitize:nN {#2} \l__file_basename_str
+    \__file_name_sanitize:nN {#2} \l__file_base_name_str
     \iow_close:N #1
     \seq_gpop:NNTF \g_@@_streams_seq \l_@@_stream_tl
-      { \@@_open_stream:NV #1 \l__file_basename_str }
+      { \@@_open_stream:NV #1 \l__file_base_name_str }
 %<*initex>
       { \__msg_kernel_fatal:nn { kernel } { output-streams-exhausted } }
 %</initex>
@@ -1603,7 +1603,7 @@
       {
         \@@_new:N #1
         \tl_set:Nx \l_@@_stream_tl { \int_eval:n {#1} }
-        \@@_open_stream:NV #1 \l__file_basename_str
+        \@@_open_stream:NV #1 \l__file_base_name_str
       }
 %</package>
   }
@@ -2378,14 +2378,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_path_include:n #1
   {
-    \__file_name_sanitize:nN {#1} \l__file_path_str
-    \seq_if_in:NVF \l_file_search_path_seq \l__file_path_str
-      { \seq_put_right:NV \l_file_search_path_seq \l__file_path_str }
+    \__file_name_sanitize:nN {#1} \l__file_full_name_str
+    \seq_if_in:NVF \l_file_search_path_seq \l__file_full_name_str
+      { \seq_put_right:NV \l_file_search_path_seq \l__file_full_name_str }
   }
 \cs_new_protected:Npn \file_path_remove:n #1
   {
-    \__file_name_sanitize:nN {#1} \l__file_path_str
-    \seq_remove_all:NV \l_file_search_path_seq \l__file_path_str
+    \__file_name_sanitize:nN {#1} \l__file_full_name_str
+    \seq_remove_all:NV \l_file_search_path_seq \l__file_full_name_str
   }
 %    \end{macrocode}
 % \end{macro}
