typo fixes update datatype xlsx (fp and str so far)

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -200,7 +200,7 @@
 % \begin{function}[EXP,pTF, added = 2015-09-18]
 %   {\str_if_empty:N, \str_if_empty:c}
 %   \begin{syntax}
-%     \cs{sr_if_empty_p:N} \meta{str~var}
+%     \cs{str_if_empty_p:N} \meta{str~var}
 %     \cs{str_if_empty:NTF} \meta{str~var} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests if the \meta{string variable} is entirely empty
