Use curr not current for file name parts
This might have a knock on in some other places, e.g.
\l__color_current_tl ...

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1529,7 +1529,7 @@
 %    \begin{macrocode}
 \cs_set_protected:Npn \@pushfilenameaux #1#2#3
   {
-    \str_gset:Nn \g_file_current_name_str {#3}
+    \str_gset:Nn \g_file_curr_name_str {#3}
     #1 #2 {#3}
   }
 \tl_put_right:Nn \@popfilename
