--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -71,9 +71,9 @@
 %
 % \begin{variable}[added = 2017-06-21]
 %   {
-%     \g_file_current_dir_str,
-%     \g_file_current_name_str,
-%     \g_file_current_ext_str
+%     \g_file_curr_dir_str,
+%     \g_file_curr_name_str,
+%     \g_file_curr_ext_str
 %   }
 %   Contain the directory, name and extension of the current file. The
 %   directory will be empty if the file was loaded without an explicit
@@ -687,28 +687,28 @@
 %
 % \begin{variable}
 %   {
-%     \g_file_current_dir_str ,
-%     \g_file_current_ext_str ,
-%     \g_file_current_name_str
+%     \g_file_curr_dir_str ,
+%     \g_file_curr_ext_str ,
+%     \g_file_curr_name_str
 %   }
 %   The name of the current file should be available at all times.
 %   For the format the file name needs to be picked up at the start of the
 %   file. In \LaTeXe{} package mode the current file name is collected from
 %   \tn{@currname}.
 %    \begin{macrocode}
-\str_new:N \g_file_current_dir_str
-\str_new:N \g_file_current_ext_str
-\str_new:N \g_file_current_name_str
+\str_new:N \g_file_curr_dir_str
+\str_new:N \g_file_curr_ext_str
+\str_new:N \g_file_curr_name_str
 %<*initex>
 \tex_everyjob:D \exp_after:wN
   {
     \tex_the:D \tex_everyjob:D
-    \str_gset:Nx \g_file_current_name_str { \tex_jobname:D }
+    \str_gset:Nx \g_file_curr_name_str { \tex_jobname:D }
   }
 %</initex>
 %<*package>
 \cs_if_exist:NT \@currname
-  { \str_gset_eq:NN \g_file_current_name_str \@currname }
+  { \str_gset_eq:NN \g_file_curr_name_str \@currname }
 %</package>
 %    \end{macrocode}
 % \end{variable}
@@ -761,7 +761,7 @@
 \tex_everyjob:D \exp_after:wN
   {
     \tex_the:D \tex_everyjob:D
-    \seq_gput_right:NV \g_@@_record_seq \g_file_current_name_str
+    \seq_gput_right:NV \g_@@_record_seq \g_file_curr_name_str
   }
 %</initex>
 %    \end{macrocode}
@@ -999,15 +999,15 @@
   {
     \seq_gpush:Nx \g_@@_stack_seq
       {
-        { \g_file_current_dir_str }
-        { \g_file_current_name_str }
-        { \g_file_current_ext_str }
+        { \g_file_curr_dir_str }
+        { \g_file_curr_name_str }
+        { \g_file_curr_ext_str }
       }
     \file_parse_full_name:nNNN {#1}
       \l_@@_dir_str \l_@@_name_str \l_@@_ext_str
-    \str_gset_eq:NN \g_file_current_dir_str  \l_@@_dir_str
-    \str_gset_eq:NN \g_file_current_name_str \l_@@_name_str
-    \str_gset_eq:NN \g_file_current_ext_str  \l_@@_ext_str
+    \str_gset_eq:NN \g_file_curr_dir_str  \l_@@_dir_str
+    \str_gset_eq:NN \g_file_curr_name_str \l_@@_name_str
+    \str_gset_eq:NN \g_file_curr_ext_str  \l_@@_ext_str
   }
 \cs_new_protected:Npn \@@_input_pop:
   {
@@ -1016,9 +1016,9 @@
   }
 \cs_new_protected:Npn \@@_input_pop:nnn #1#2#3
   {
-    \str_gset:Nn \g_file_current_dir_str  {#1}
-    \str_gset:Nn \g_file_current_name_str {#2}
-    \str_gset:Nn \g_file_current_ext_str  {#3}
+    \str_gset:Nn \g_file_curr_dir_str  {#1}
+    \str_gset:Nn \g_file_curr_name_str {#2}
+    \str_gset:Nn \g_file_curr_ext_str  {#3}
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2367,7 +2367,7 @@
 %   For removal after 2018-12-31.
 %    \begin{macrocode}
 \tl_new:N \g_file_current_name_tl
-\tl_gset:Nn \g_file_current_name_tl { \g_file_current_name_str }
+\tl_gset:Nn \g_file_current_name_tl { \g_file_curr_name_str }
 %    \end{macrocode}
 % \end{variable}
 %
