Move \file_if_exist_input:N(TF) to stable

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -105,6 +105,19 @@
 %   \cs{l_file_search_path_seq}.
 % \end{function}
 %
+% \begin{function}[TF, added = 2014-07-02]{\file_if_exist_input:n}
+%   \begin{syntax}
+%     \cs{file_if_exist_input:n} \Arg{file name}
+%     \cs{file_if_exist_input:nTF} \Arg{file name} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Searches for \meta{file name} using the current \TeX{} search
+%   path and the additional paths controlled by
+%   \cs{file_path_include:n}). If found, inserts the \meta{true code} then
+%   reads in the file as additional \LaTeX{} source as described for
+%   \cs{file_input:n}. Note that \cs{file_if_exist_input:n} does not raise
+%   an error if the file is not found, in contrast to \cs{file_input:n}.
+% \end{function}
+%
 % \begin{function}[updated = 2017-06-23]
 %   {\file_get_full_name:nN, \file_get_full_name:VN}
 %   \begin{syntax}
@@ -940,6 +953,45 @@
     \str_if_empty:NTF \l__file_full_name_str
       { \prg_return_false: }
       { \prg_return_true: }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[TF]{\file_if_exist_input:n}
+%   Input of a file with a test for existence cannot be done the usual
+%   way as the tokens to insert are in an odd place.
+%    \begin{macrocode}
+\cs_new_protected:Npn \file_if_exist_input:n #1
+  {
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NF \l__file_full_name_str
+      { \@@_input:V \l__file_full_name_str }
+  }
+\cs_new_protected:Npn \file_if_exist_input:nT #1#2
+  {
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NF \l__file_full_name_str
+      {
+        #2
+        \@@_input:V \l__file_full_name_str
+      }
+  }
+\cs_new_protected:Npn \file_if_exist_input:nF #1#2
+  {
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
+      {#2}
+      { \@@_input:V \l__file_full_name_str }
+  }
+\cs_new_protected:Npn \file_if_exist_input:nTF #1#2#3
+  {
+    \file_get_full_name:nN {#1} \l__file_full_name_str
+    \str_if_empty:NTF \l__file_full_name_str
+      {#3}
+      {
+        #2
+        \@@_input:V \l__file_full_name_str
+      }
   }
 %    \end{macrocode}
 % \end{macro}
