more analysis (bool) fixed typo in l3token

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -280,7 +280,7 @@
 %     \cs{char_set_uccode:nn} \Arg{intexpr_1} \Arg{intexpr_2}
 %   \end{syntax}
 %   Sets up the behaviour of the \meta{character} when
-%   found inside \cs{tl_to_uppercase:n}, such that \meta{character_1}
+%   found inside \cs{tl_upper_case:n}, such that \meta{character_1}
 %   will be converted into \meta{character_2}. The two \meta{characters}
 %   may be specified using an \meta{integer expression} for the character code
 %   concerned. This may include the \TeX{} |`|\meta{character}
