--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -89,7 +89,16 @@
 %     \@@_parse_round_deprecation_error:Nw
 %   }
 % \begin{macro}[aux, deprecated = 2017-12-31]{round+, round0, round-}
-%   This looks for |+|, |-|, |0| after |round|.  That syntax is deprecated.
+%   This looks for |+|, |-|, |0| after |round|.  That syntax was
+%   deprecated in 2013 but the system to tell users about deprecated
+%   syntax was not really available then, so we did not have anything
+%   set up.  The date |2016-07-01| is arbitrary, chosen so that
+%   \pkg{l3doc} will complain when the syntax should be removed by
+%   removing everything until the last \cs{fi:} in
+%   \cs{@@_parse_word_round:N} (and getting rid of the unused
+%   definitions of \cs{@@_parse_round:Nw} and
+%   \cs{@@_parse_round_deprecation_error:Nw} here and in
+%   \pkg{l3deprecation}, perhaps also of the |fp-deprecated| error).
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_word_round:N #1#2
   {
