--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1984,7 +1984,7 @@
 %
 % \subsection{Deprecated functions}
 %
-% \begin{macro}{\box_resize:Nnn, \box_resize:cnn}
+% \begin{macro}[deprecated = 2018-12-31]{\box_resize:Nnn, \box_resize:cnn}
 %    \begin{macrocode}
 \cs_new_eq:NN \box_resize:Nnn \box_resize_to_wd_and_ht_plus_dp:Nnn
 \cs_new_eq:NN \box_resize:cnn \box_resize_to_wd_and_ht_plus_dp:cnn
