Simplify bits of code in l3file.dtx, correctly mark deprecations
- Correctly add deprecated functions to l3deprecation.dtx and
make them produce warnings.
- Improve error recovery when the number of quotes is odd.
- Minor refactorings (removing unnecessary expansions of strings,
using "vector" operations on clists rather than mapping through
items,...).
- Use \__prg_break: machinery in \file_get_full_name:nN to treat
the current directories, the expl3 path and the LaTeX2e paths on
the same footing without having to concatenate lists every time.
- Correct which file name is picked up by \ior_open:NnTF.
- Add a few tests.

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -145,6 +145,12 @@
     \@@_error:Nnn \c_minus_one { - 1 } { 2018-12-31 }
     \@@_error:Nnn \sort_ordered: { \sort_return_same: } { 2018-12-31 }
     \@@_error:Nnn \sort_reversed: { \sort_return_swapped: } { 2018-12-31 }
+    \@@_error:Nnn \g_file_current_name_tl { \g_file_curr_name_str } { 2018-12-31 }
+    \@@_error:Nnn \file_add_path:nN { \file_get_full_name:nN } { 2018-12-31 }
+    \@@_error:Nnn \file_path_include:n
+      { \seq_put_right:Nn \l_file_search_path_seq } { 2018-12-31 }
+    \@@_error:Nnn \file_path_remove:n
+      { \seq_remove_all:Nn \l_file_search_path_seq } { 2018-12-31 }
     \cs_set_eq:NN \__fp_parse_round:Nw \__fp_parse_round_deprecation_error:Nw
     \cs_set_eq:NN \deprecation_error: \scan_stop:
   }
